; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_19286.c_error.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_19286.c_error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@pid = common dso_local global i64 0, align 8
@SIGKILL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @error(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i8*, i8** %2, align 8
  %4 = call i32 @perror(i8* %3)
  %5 = load i64, i64* @pid, align 8
  %6 = icmp sgt i64 %5, 0
  br i1 %6, label %7, label %11

7:                                                ; preds = %1
  %8 = load i64, i64* @pid, align 8
  %9 = load i32, i32* @SIGKILL, align 4
  %10 = call i32 @kill(i64 %8, i32 %9)
  br label %11

11:                                               ; preds = %7, %1
  %12 = call i32 @exit(i32 1) #3
  unreachable
}

declare dso_local i32 @perror(i8*) #1

declare dso_local i32 @kill(i64, i32) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
